[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jupyterhub_share"]
include = ["*.py"]
exclude = ["test*"]

[project]
name = "jupyterhub_share"
description = "JupyterHub Share feature. Enables to easily share chosen UserOptions."
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["jupyterhub"]
authors = [
    {name = "Tim Kreuzer", email = "t.kreuzer@fz-juelich.de"}
]

dependencies = [
    "escapism",
    "jinja2",
    "jupyterhub>=4.0.0",
    "traitlets",
    "urllib3",
]

[tool.black]
target_version = [
  "py39",
  "py310",
  "py311",
  "py312",
]

[tool.isort]
profile = "black"

[tool.tbump]
github_url = "https://github.com/kreuzert/jupyterhub-share-button"


[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[[tool.tbump.file]]
src = "jupyterhub_share/_version.py"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[tool.djlint]
indent = 2
profile = "jinja"
